<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            tools:context=".MainActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_destinations"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="24dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/ll_transport"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_destinations_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_destinations"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RelativeLayout
                    android:id="@+id/rl_destinations"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@id/cl_buttons"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_destinations_header">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_destinations"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:visibility="visible"
                        tools:listitem="@layout/item_destination" />

                    <TextView
                        android:id="@+id/tv_destinations_placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="12dp"
                        android:visibility="visible"
                        android:text="@string/hint_no_destinations"
                        android:gravity="center"/>
                </RelativeLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_buttons"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rl_destinations">
                <Button
                    android:id="@+id/bt_clear"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="4dp"
                    android:background="@drawable/background_transparent_with_green_stroke"
                    android:text="@string/bt_clear_all"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/bt_maps"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/bt_maps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/background_transparent_with_green_stroke"
                    android:text="@string/bt_add_new"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/bt_clear"
                    app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/ll_transport"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="36dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/bt_calculate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/tv_transport_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/header_transport"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="24sp" />

                <RadioGroup
                    android:id="@+id/rg_transport"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_car"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:buttonTint="@color/quantum_white_100"
                        android:checked="true"
                        android:drawableStart="@drawable/ic_car"
                        android:drawablePadding="4dp"
                        android:fontFamily="sans-serif-medium"
                        android:padding="12dp"
                        android:textColor="@color/quantum_white_100"
                        android:contentDescription="@string/by_car"/>

                    <RadioButton
                        android:id="@+id/rb_foot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:background="@color/colorPrimary"
                        android:buttonTint="@color/quantum_white_100"
                        android:drawableStart="@drawable/ic_foot"
                        android:drawablePadding="4dp"
                        android:fontFamily="sans-serif-medium"
                        android:padding="12dp"
                        android:textColor="@color/quantum_white_100"
                        android:contentDescription="@string/by_foot"/>

                    <RadioButton
                        android:id="@+id/rb_bicycle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="2dp"
                        android:background="@color/colorPrimary"
                        android:buttonTint="@color/quantum_white_100"
                        android:drawableStart="@drawable/ic_bike"
                        android:drawablePadding="4dp"
                        android:fontFamily="sans-serif-medium"
                        android:padding="12dp"
                        android:textColor="@color/quantum_white_100"
                        android:contentDescription="@string/by_bike"/>
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/bt_calculate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_transparent_with_green_stroke"
                android:text="@string/bt_calculate"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>