<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:padding="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MainActivity">


            <TextView
                android:id="@+id/tv_destinations_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/header_last_result"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_result"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="-6dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/tv_destinations_footer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_destinations_header"
                tools:listitem="@layout/item_result" />

            <TextView
                android:id="@+id/tv_result_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hint_no_results"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_destinations_header" />

            <TextView
                android:id="@+id/tv_destinations_footer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/header_total_distance"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/adView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_destinations_distance_value"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/tv_destinations_footer"
                app:layout_constraintStart_toEndOf="@id/tv_destinations_footer"
                app:layout_constraintTop_toTopOf="@id/tv_destinations_footer"
                tools:text="12km" />

            <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
                ads:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>